<<<<<<< Updated upstream
[gd_scene load_steps=6 format=2]

[ext_resource path="res://Disco 1.png" type="Texture" id=1]
[ext_resource path="res://discoFeliz.gd" type="Script" id=2]
=======
[gd_scene load_steps=8 format=2]

[ext_resource path="res://DiscoMaster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Disco.gd" type="Script" id=3]
[ext_resource path="res://DAzulUp.png" type="Texture" id=4]
[ext_resource path="res://DiscoAzul.gd" type="Script" id=5]
>>>>>>> Stashed changes

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 15.0

[sub_resource type="CircleShape2D" id=5]

<<<<<<< Updated upstream
[node name="Disco" type="KinematicBody2D"]
position = Vector2( 117, 56 )
script = ExtResource( 2 )
=======
[node name="Discos" type="Node2D"]
script = ExtResource( 3 )

[node name="DiscoFeliz" parent="." instance=ExtResource( 1 )]

[node name="DiscoAzul" type="KinematicBody2D" parent="."]
position = Vector2( 117, 56 )
script = ExtResource( 5 )
>>>>>>> Stashed changes
__meta__ = {
"_edit_group_": true
}

<<<<<<< Updated upstream
[node name="Disco1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Area2DKILL" type="Area2D" parent="."]
=======
[node name="Disco2" type="Sprite" parent="DiscoAzul"]
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="DiscoAzul"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiscoAzul/Area2D"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiscoAzul"]
shape = SubResource( 3 )

[node name="Area2DKILL" type="Area2D" parent="DiscoAzul"]
>>>>>>> Stashed changes
scale = Vector2( 1.56, 1.56 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

<<<<<<< Updated upstream
[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DKILL"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2DKILL" to="." method="_on_Area2DKILL_body_entered"]
=======
[node name="CollisionShape2D" type="CollisionShape2D" parent="DiscoAzul/Area2DKILL"]
shape = SubResource( 5 )

[node name="RecoilSpawnDAV" type="Timer" parent="DiscoAzul"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SelfDestruction" type="Timer" parent="DiscoAzul"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="DiscoAzul/Area2D" to="DiscoAzul" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="DiscoAzul/Area2DKILL" to="DiscoAzul" method="_on_Area2DKILL_body_entered"]
[connection signal="timeout" from="DiscoAzul/RecoilSpawnDAV" to="DiscoAzul" method="_on_RecoilSpawnDF_timeout"]
[connection signal="timeout" from="DiscoAzul/SelfDestruction" to="DiscoAzul" method="_on_selfDestruction_timeout"]
>>>>>>> Stashed changes
